--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,26 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+header {
+  width: 100%;
+  height: 100px;
+  border-bottom: 1px solid #eaeaea;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu {
+  padding: 8px 24px;
+  font-size: 1.5rem;
+}
+
+.menu:hover, 
+.menu:focus,
+.menu:active {
+  color:#8c9eb3;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
